# monark

./: .firebaserc  .gitignore  .rooignore  .roomodes  AGENTS.md  README.md  auth.html  biome.json  firebase.json  package-lock.json  package.json  specification.md  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: tauri-release.yml
.memory_bank/: productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
.roo/: mcp.json
.roo/commands/: frontend-think.md
.roo/rules/: 01-general.md  02-react.md
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: 01-general.md  03-tauri.md  04-review.md  AGENTS.md  rules.md
.roo/rules-debug/: AGENTS.md
.roo/rules-orchestrator/: rules.md
docs/: accessibility-guide.md  cloud-storage-architecture.md  crypto-architecture.md  i18n-system.md  redux-state.md  security-audit.md  testing-cloud-storage.md  vault-format.md
redirect/: index.html
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: errors.rs  mod.rs  storage.rs  vault.rs
src-tauri/src/crypto/: argon2.rs  base64.rs  chacha.rs  constants.rs  error.rs  hmac.rs  mod.rs  random.rs
src-tauri/src/crypto/tests/: argon2.rs  base64.rs  chacha.rs  constants.rs  error.rs  hmac.rs  mod copy.rs  mod.rs  random.rs
src-tauri/src/io/: error.rs  fs.rs  mod.rs  signature.rs  vault.rs
src-tauri/src/io/tests/: error.rs  fs.rs  mod.rs  signature.rs
src-tauri/src/storage/: README.md  config.rs  error.rs  manager.rs  mod.rs
src-tauri/src/storage/manager/: file_operations.rs  mod.rs  provider_management.rs  vault_operations.rs
src-tauri/src/storage/providers/: google_drive.rs  local.rs  mod.rs
src-tauri/src/storage/tests/: google_drive_auth.rs  mod.rs
src-tauri/src/vault/: cloud_lifecycle.rs  lifecycle.rs  mod.rs
src-tauri/src/vault/tests/: lifecycle.rs  mod.rs
src/components/Settings/: AppearanceSettings.tsx  CloudStorageSettings.tsx  GeneralSettings.tsx  ResetSection.tsx  SettingsLayout.tsx  SettingsScreen.tsx  UpdateSection.tsx
src/components/UI/: Modal.tsx  ThemeSwitcher.tsx  Toast.tsx
src/components/Vault/: AddEntryModal.tsx  AddGroupModal.tsx  AddVaultForm.tsx  AddVaultModal.tsx  CloudVaultIndicator.tsx  CopyToast.tsx  DeleteVaultModal.tsx  EditEntryModal.tsx  (+24 more)
src/hooks/: withTheme.tsx
src/i18n/: index.ts
src/interfaces/: cloud-storage.interface.ts  csv.interface.ts  parsers.interface.ts  vault.interface.ts
src/parsers/: ButtercupParser.ts  csvParsersRegistry.ts
src/redux/: store.tsx
src/routes/: __root.tsx  index.tsx  settings.tsx
src/screens/: Home.tsx  Settings.tsx
src/services/: cloudStorage.ts  commands.ts  deepLinkService.ts  localOAuthServer.ts  vault.ts  vaultState.ts
src/share/: settings.ts  themes.ts
src/store/: Settings.ts  settings.test.ts  settings.ts
src/test/: setup.ts  vault-persistence.integration.test.ts
src/types/: updater.types.ts
src/utils/: VaultUpdater.ts  csv.ts  dateFormatter.ts  platform.ts  vaultNavigation.ts  vaultSearch.ts
(+38 files in other folders)
