[package]
name = "monark"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "monark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
argon2 = { version = "0.5", features = ["std"] }
chacha20poly1305 = { version = "0.10.1" }
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }
hex = "0.4"
thiserror = "1"
chrono = { version = "0.4.41", features = ["serde"] }
tempfile = "3"
tokio = "1.47.1"
tauri-plugin-fs = "2.4.1"
tauri-plugin-os = "2"
